# django-role-permission

./: LICENSE  README.rst  setup.cfg
role_permission/: admin.py  apps.py  models.py
role_permission/management/commands/: initrolepermission.py
role_permission/migrations/: 0001_initial.py
